[package]
name = "ipmap"
version = "0.1.1"
authors = ["Aditya Suresh <ethanaditya@gmail.com>", "Grant H. <grantshandy@gmail.com>", "Nick Z. <nicholasz2510@gmail.com>"]
edition = "2018"
license = "GPL-3.0"
description = "An interactive map that shows connected IP addresses."
repository = "https://github.com/skylinecc/ipmap/"
keywords = ["geolocation", "ip", "locator", "map", "interactive"]
categories = ["network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.59"
casual_logger = "0.6.5"
clap = "2.33.3"
rocket = "0.4.6"
rocket-include-static-resources = "0.9.5"
users = "0.11.0"
ipgeolocate = "0.2.3"
once_cell = "1.5.2"
serde = "1.0.117"
pnet = "0.26.0"
ipnetwork = "0.17.0"
failure = "0.1.8"


[target.'cfg(target_os="windows")'.dependencies]
netstat2 = "0.9.0"
sysinfo = "0.15.1"

[target.'cfg(target_os="linux")'.dependencies]
procfs = "0.7.4"